fixing date spacing

--- a/src/assets/styles/Timeline.scss
+++ b/src/assets/styles/Timeline.scss
@@ -2,7 +2,7 @@
     padding: 5% 10%;
     display: flex;
     flex-direction: column;
-    text-align: center;
+    text-align: left;
 
     svg {
         color: white;
